--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
       </div>
     </header>
     <section class="container">
-      <section class="items"></section>
+      <section class="items">
+        <div class="loading"> 
+          carregando...
+        </div>
+      </section>
       <section class="cart">
         <ol class="cart__items"></ol>
         <button class="empty-cart">Esvaziar carrinho</button>
