--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
       </section>
       <section class="cart">
         <ol class="cart__items"></ol>
+        <div class="total-price">
+          <span>Total:</span>
+          <span></span>
+        </div>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
     </section>
